# cmake_with_cgal

./: CMakeLists.txt  LICENSE  README.md  Readme.md
src/: Source.cpp
